[gd_scene load_steps=2 format=2]

[ext_resource path="res://Title.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_left = 56.0
margin_top = 21.0
margin_right = 243.0
margin_bottom = 53.0
rect_scale = Vector2( 5, 5 )
text = "TANKS!TANKS!TANKS!TANKS!
TANKS!TANKS!TANKS!TANKS!"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -59.0
margin_top = -110.0
margin_right = 59.0
margin_bottom = -63.0
text = "Start"

[node name="TitleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="TitleTimer" to="." method="_on_TitleTimer_timeout"]
